group service stub

--- a/vonline_be/war/login.html
+++ b/vonline_be/war/login.html
@@ -51,6 +51,10 @@
     <tr>
       <td><input type="button" id="go" value="go" onclick="javascript:login();"/></td>
     </tr>
+    <tr>
+      <td><a href="/register.jsp"/>register</a></td>
+    </tr>
+    
   </table>
   </form>
   
