--- a/vonline_be/war/login.html
+++ b/vonline_be/war/login.html
@@ -2,62 +2,70 @@
 
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head>
-  <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-  <title>Login</title>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+<title>Login</title>
 
-  <script src="js/thrift.js"  type="text/javascript"></script>
-  <script src="gen-js/user_types.js"    type="text/javascript"></script>
-  <script src="gen-js/AuthService.js"        type="text/javascript"></script>
+<script src="js/thrift.js" type="text/javascript"></script>
+<script src="gen-js/user_types.js" type="text/javascript"></script>
+<script src="gen-js/AuthService.js" type="text/javascript"></script>
 
-  <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js"></script>
+<script type="text/javascript"
+	src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js"></script>
 
 
-  <script type="text/javascript" charset="utf-8">
-  //<![CDATA[
+<script type="text/javascript" charset="utf-8">
+	function login() {
+		var transport = new Thrift.Transport("/thrift/AuthService");
+		var protocol = new Thrift.Protocol(transport);
+		var client = new com.vmesteonline.be.AuthServiceClient(protocol);
 
-  function login() {
-    var transport = new Thrift.Transport("/thrift/AuthService");
-    var protocol  = new Thrift.Protocol(transport);
-    var client    = new com.vmesteonline.be.AuthServiceClient(protocol);
+		var session;
 
-    var session;
-    try {
-      session = client.login($("#uname").val(),$("#password").val());
-      $('#result').val(session.salt);
-      $('#result').css('color', 'black');
-    } catch(ouch){
-      $('#result').val(ouch.why);
-      $('#result').css('color', 'red');
-    }
-  }
-  //]]>
-  </script>
+		try {
+			session = client.login($("#uname").val(), $("#password").val());
+
+			if (session.accessGranted) {
+				$('#result').val("acess granted");
+				$('#result').css('color', 'black');
+			} else {
+				$('#result').val(session.error);
+				$('#result').css('color', 'black');
+			}
+		} catch (ouch) {
+			$('#result').val("smth happen");
+			$('#result').css('color', 'red');
+		}
+	}
+</script>
 
 </head>
 <body>
-  <h2>Login page</h2>
-  <form action="">
-  <table class="login">
-    <tr>
-      <td>login</td>
-      <td><input type="text" id="uname" value="testLogin"/></td>
-    </tr>
-    <tr>
-      <td>password</td>
-      <td><input type="text" id="password" value="testPassword"/></td></tr>
-    <tr>
-      <td>result</td>
-      <td><input type="text" id="result" value=""/></td></tr>
-    <tr>
-      <td><input type="button" id="go" value="go" onclick="javascript:login();"/></td>
-    </tr>
-    <tr>
-      <td><a href="/register.jsp"/>register</a></td>
-    </tr>
-    
-  </table>
-  </form>
-  
-  
+	<h2>Login page</h2>
+	<form action="">
+		<table class="login">
+			<tr>
+				<td>login</td>
+				<td><input type="text" id="uname" value="testLogin" /></td>
+			</tr>
+			<tr>
+				<td>password</td>
+				<td><input type="text" id="password" value="testPassword" /></td>
+			</tr>
+			<tr>
+				<td>result</td>
+				<td><input type="text" id="result" value="" /></td>
+			</tr>
+			<tr>
+				<td><input type="button" id="go" value="go"
+					onclick="javascript:login();" /></td>
+			</tr>
+			<tr>
+				<td><a href="/register.jsp" />register</a></td>
+			</tr>
+
+		</table>
+	</form>
+
+
 </body>
 </html>
