--- a/vonline_be/war/index.html
+++ b/vonline_be/war/index.html
@@ -96,6 +96,9 @@
                 <script type="text/javascript">
                     try{ace.settings.check('sidebar' , 'fixed')}catch(e){}
                 </script>
+                <div class="show-left">
+                    Меню
+                </div>
                 <ul class="nav nav-list">
                     <li class="active">
                         <a href="index.html">
