Создание топиков доп.

--- a/vonline_be/war/shop.html
+++ b/vonline_be/war/shop.html
@@ -588,9 +588,10 @@
 <script src="js/jquery.flexslider-min.js"></script>
 
 <!-- -->
-<!-- собственные скрипты  -->
 <script src="js/ace-extra.min.js"></script>
 <script src="js/ace-elements.min.js"></script>
+<!-- собственные скрипты  -->
+<script src="js/common.js"></script>
 <script src="js/shop.js"></script>
 
 </body>
