--- a/vonline_be/war/login.html
+++ b/vonline_be/war/login.html
@@ -6,6 +6,7 @@
 <title>Login</title>
 
 <script src="js/thrift.js" type="text/javascript"></script>
+<script src="gen-js/authservice_types.js" type="text/javascript"></script>
 <script src="gen-js/AuthService.js" type="text/javascript"></script>
 
 <script type="text/javascript"
