--- a/vonline_be/war/post_file.demo.html
+++ b/vonline_be/war/post_file.demo.html
@@ -1,10 +1,36 @@
 <html>
+<head>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <title>Test form</title>
+    <script src="http://code.jquery.com/jquery-latest.min.js"></script>
+    <script type="text/javascript">
+    $(document).ready(function(){
+    	$('form[name="localSubmit"]').on('submit', function(e) {
+    		e.preventDefault();
+    	     $.ajax({
+    	            type: 'POST',
+    	            url: '/file/',
+    	            data: data,
+    	            cache: false,
+    	            contentType: false,
+    	            processData: false,
+    	            success: function(data){
+    	               alert(data);
+    	               label[name="rslt"].value=data;
+    	            }
+    	     }).fail(function(){alert("Failed!!");});
+    	});
+    });
+    </script>
+</head>
 <body><p>Post a local file</p>
 <p>
-<form action="/file/" method="post" enctype="multipart/form-data">
+<form name="localSubmit" action="/file/" method="post" enctype="multipart/form-data">
     <input type="file" name="data"/> 
-    <input type="hidden" name="public"/> <!-- Be sure that you gona make file accessible for everyone -->
+    <input type="hidden" name="public"/> 
+    <!-- Be sure that you gona make file accessible for everyone -->
     <input type="submit" />
+    <p><label name="rslt"/></p>
 </form>
 </p>
 <br/>
