--- a/vonline_be/war/ajax-confirmOrder.html
+++ b/vonline_be/war/ajax-confirmOrder.html
@@ -25,7 +25,7 @@
                     <section class="confirm-order">
                         <div class="order-date">Заказ на <span></span></div>
 
-                        <div class="catalog">
+                        <div class="catalog-confirm">
 
                         </div>
 
