--- a/vonline_be/war/ajax/ajax-confirmOrder.html
+++ b/vonline_be/war/ajax/ajax-confirmOrder.html
@@ -35,6 +35,8 @@
 
                         <div class="additionally-order">
                             <div class="delivery-right">
+                                <input id="phone-delivery" type="tel" required="required" placeholder="Укажите ваш номер телефона"/>
+                                <div class="alert-delivery alert-delivery-phone"></div>
                                 <h3>Доставка</h3>
                                 <div class="radio">
                                     <label>
@@ -50,8 +52,6 @@
                                 </div>
                                 <div class="input-delivery">
                                     <span class="lbl">Стоимость доставки : <span class="delivery-cost">0</span> руб</span>
-                                    <!--<input id="phone-delivery" type="tel" required="required" placeholder="Номер телефона"/>-->
-                                    <div class="alert-delivery alert-delivery-phone"></div>
                                     <div class="btn-group delivery-dropdown">
                                         <button data-toggle="dropdown" class="btn btn-info btn-sm dropdown-toggle no-border">
                                             <span class="btn-group-text">Выбрать адрес</span>
@@ -77,7 +77,7 @@
                             </div>
                             <textarea name="order-comment" id="order-comment" placeholder="Комментарий к заказу"></textarea>
                             <button class="btn btn-sm btn-primary no-border btn-order">Заказать</button>
-                            <button class="btn btn-sm btn-grey no-border btn-cancel">Отменить</button>
+                            <button class="btn btn-sm btn-grey no-border btn-cancel">Назад</button>
                         </div>
                     </section>
 
