правки для заполнения адресов

--- a/vonline_be/war/ajax/ajax-confirmOrder.html
+++ b/vonline_be/war/ajax/ajax-confirmOrder.html
@@ -65,11 +65,11 @@
                                     </div>
                                     <span class="lbl"> Адрес доставки: <span class="delivery-address"></span></span>
                                     <div class="address-input">
-                                        <input id="country-delivery" type="text" value="Россия" placeholder="Страна"/>
-                                        <input id="city-delivery" type="text" value="Санкт-Петербург" placeholder="Город"/>
-                                        <input id="street-delivery" type="text" placeholder="Улица"/>
-                                        <input id="building-delivery" type="text" class="short first" placeholder="Дом"/>
-                                        <input id="flat-delivery" type="text" class="short" placeholder="Квартира"/>
+                                        <input class="country-delivery" type="text" value="Россия" placeholder="Страна"/>
+                                        <input class="city-delivery" type="text" value="Санкт-Петербург" placeholder="Город"/>
+                                        <input class="street-delivery" type="text" placeholder="Улица"/>
+                                        <input class="building-delivery short first" type="text" placeholder="Дом"/>
+                                        <input class="flat-delivery short" type="text" placeholder="Квартира"/>
                                         <a class="btn btn-sm btn-primary no-border add-address" href="#">Добавить</a>
                                     </div>
                                 </div>
