--- a/vonline_be/war/ajax/ajax-confirmOrder.html
+++ b/vonline_be/war/ajax/ajax-confirmOrder.html
@@ -59,8 +59,8 @@
                                         </button>
 
                                         <ul class="dropdown-menu dropdown-blue">
-                                            <li class="divider"></li>
-                                            <li><a href="#" class="delivery-add-address">Добавить адрес ...</a></li>
+                                            <!--<li class="divider"></li>
+                                            <li><a href="#" class="delivery-add-address">Добавить адрес ...</a></li>-->
                                         </ul>
                                     </div>
                                     <span class="lbl"> Адрес доставки: <span class="delivery-address"></span></span>
