--- a/vonline_be/war/ajax/ajax-confirmOrder.html
+++ b/vonline_be/war/ajax/ajax-confirmOrder.html
@@ -32,6 +32,9 @@
                         <div class="itogo-right">
                             Товаров на сумму: <span></span> руб.
                         </div>
+                        <div class="weight-right">
+                            Вес: <span></span> гр.
+                        </div>
 
                         <div class="additionally-order">
                             <div class="delivery-right">
