--- a/vonline_be/war/ajax/ajax-orderEnd.html
+++ b/vonline_be/war/ajax/ajax-orderEnd.html
@@ -110,23 +110,62 @@
             <div class="main-content">
                 <div class="dynamic">
                     <section class="order-end">
-                        <h3>Ваш заказ принят ! В ближайшее время мы с вами свяжемся.</h3>
-                        <div class="order-end-info">
-                            <div class="orders-tbl-wrap">
-                                <table>
-                                    <tr>
-                                        <td class="td2">N</td>
-                                        <td class="td3">Дата</td>
-                                        <td class="td4">Статус</td>
-                                        <td class="td5">Доставка</td>
-                                        <td class="td9">Цена<br> доставки</td>
-                                        <td class="td8">Вес(г)</td>
-                                        <td class="td6">Сумма</td>
-                                    </tr>
-                                </table>
+                        <a class="to-main-link" href="/shop.jsp"><< Вернуться на главную</a>
+
+                        <section class="order-end-in">
+                            <h3>Спасибо за заказ, ждем вас снова !</h3>
+
+                        <div class="bill-wrap">
+                            <span class="bill-title">Информация о заказе</span>
+
+                            <div class="order-end-head">
+                                <div class="order-end-head-left">
+                                  <div class="bill-item bill-amount">Всего : <span></span> р.</div>
+                                  <div class="bill-item bill-delivery-address">Адрес доставки: <span></span></div>
+                                  <div class="bill-item bill-date-delivery">Дата и время доставки: <span></span></div>
+                                  <div class="bill-item bill-client">Получатель: <span></span></div>
+                                  <div class="bill-item bill-client-phone">Контактный телефон: <span></span></div>
+                                  <div class="bill-item bill-pay-type">Оплата: <span></span></div>
+                                  <div class="bill-item bill-weight">Вес: <span></span></div>
+                                </div>
+                                <div class="order-end-head-right">
+                                    <div class="order-end-logo"><img src="#" alt="лого"></div>
+                                    <div class="order-end-shop-info">
+                                        <div class="bill-item bill-shop-name">Магазин: <span></span></div>
+                                        <div class="bill-item bill-order-number">Номер заказа: <span></span></div>
+                                        <div class="bill-item bill-date-order">Дата заказа: <span></span></div>
+                                        <div class="bill-item bill-shop-phone">Наш телефон: <span></span></div>
+                                        <div class="bill-item bill-shop-email">Наш email: <span></span></div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="order-end-info">
+                                <h2>Заказ</h2>
+                                <div class="bill-order-list">
+                                    <!--<table>
+                                        <tr>
+                                            <td class="td2">N</td>
+                                            <td class="td3">Дата</td>
+                                            <td class="td4">Статус</td>
+                                            <td class="td5">Доставка</td>
+                                            <td class="td9">Цена<br> доставки</td>
+                                            <td class="td8">Вес(г)</td>
+                                            <td class="td6">Сумма</td>
+                                        </tr>
+                                    </table>-->
+                                </div>
+                                <div class="order-end-amount bill-amount-order">Итого <span></span> р.</div>
+                                <h2>Доставка</h2>
+                                <div class="bill-delivery"></div>
+                                <div class="order-end-amount bill-amount-delivery">Итого <span></span> р.</div>
+                                <div class="order-end-amount all-amount">Всего: <span></span> р.</div>
                             </div>
                         </div>
-                        <a class="btn btn-primary btn-sm no-border" href="/shop.jsp">На главную</a>
+
+                        </section>
+
+                        <a class="to-main-link" href="/shop.jsp"><< Вернуться на главную</a>
+                        <div class="clearfix"></div>
                     </section>
                 </div>
             </div>
