--- a/vonline_be/war/ajax/ajax-confirmOrder.html
+++ b/vonline_be/war/ajax/ajax-confirmOrder.html
@@ -82,6 +82,7 @@
                             <button class="btn btn-sm btn-primary no-border btn-order">Заказать</button>
                             <button class="btn btn-sm btn-grey no-border btn-cancel">Назад</button>
                         </div>
+                        <div class="clearfix"></div>
                     </section>
 
                 </div>
