--- a/vonline_be/war/ajax/ajax-orderEnd.html
+++ b/vonline_be/war/ajax/ajax-orderEnd.html
@@ -141,20 +141,11 @@
                             </div>
                             <div class="order-end-info">
                                 <h2>Заказ</h2>
-                                <div class="bill-order-list">
-                                    <!--<table>
-                                        <tr>
-                                            <td class="td2">N</td>
-                                            <td class="td3">Дата</td>
-                                            <td class="td4">Статус</td>
-                                            <td class="td5">Доставка</td>
-                                            <td class="td9">Цена<br> доставки</td>
-                                            <td class="td8">Вес(г)</td>
-                                            <td class="td6">Сумма</td>
-                                        </tr>
-                                    </table>-->
-                                </div>
+                                <div class="bill-order-list"></div>
+
                                 <div class="order-end-amount bill-amount-order">Итого <span></span> р.</div>
+
+                                <div class="bill-delivery">Доставка: <span></span> </div>
 
 
                                 <div class="order-end-amount all-amount">Всего: <span></span> р.</div>
