--- a/vonline_be/war/ajax/ajax-confirmOrder.html
+++ b/vonline_be/war/ajax/ajax-confirmOrder.html
@@ -33,7 +33,7 @@
                             Товаров на сумму: <span></span> руб.
                         </div>
                         <div class="weight-right">
-                            Вес: <span></span> гр.
+                            Вес: <span></span> кг.
                         </div>
 
                         <div class="additionally-order">
