--- a/vonline_be/war/ajax/ajax-confirmOrder.html
+++ b/vonline_be/war/ajax/ajax-confirmOrder.html
@@ -70,8 +70,9 @@
                                     <div class="address-input">
                                         <input class="country-delivery" type="text" value="Россия" placeholder="Страна"/>
                                         <input class="city-delivery" type="text" value="Санкт-Петербург" placeholder="Город"/>
-                                        <input class="street-delivery" type="text" placeholder="Улица"/>
-                                        <input class="building-delivery short first" type="text" placeholder="Дом"/>
+                                       <!-- <input class="street-delivery" type="text" placeholder="Улица"/>
+                                        <input class="building-delivery short first" type="text" placeholder="Дом"/>-->
+                                        <input class="street-and-building first" type="text" placeholder="Адресс"/>
                                         <input class="flat-delivery short" type="text" placeholder="Квартира"/>
                                         <a class="btn btn-sm btn-primary no-border add-address" href="#">Добавить</a>
                                     </div>
