remove gae local libs

--- a/vonline_be/war/landmain/index.html
+++ b/vonline_be/war/landmain/index.html
@@ -119,9 +119,10 @@
     <div class="col-md-6">
       <h6>Безопасность</h6>
 			<ul>
-				<li>test</li>
-				<li>test1</li>
-				
+				<li>Каждый Ваш сосед подтверждает свое местожительства.</li>
+				<li>Все данные передаются по зашифрованному протоколу https.</li>
+
+				<li>Вы сами выбираете тех, кто может видеть Ваши сообщения</li>				
 			</ul>
       <h6>Can I switch plans later?</h6>
       <p>Absolutely. You can switch between our paid plans, or cancel your account altogether, whenever you like. We will adjust any payments accordingly.</p>
