--- a/vonline_be/war/landmain/index.html
+++ b/vonline_be/war/landmain/index.html
@@ -121,11 +121,22 @@
 			<ul>
 				<li>Каждый Ваш сосед подтверждает свое местожительства.</li>
 				<li>Все данные передаются по зашифрованному протоколу https.</li>
-
-				<li>Вы сами выбираете тех, кто может видеть Ваши сообщения</li>				
+				<li>Вы сами выбираете тех, кто может видеть Ваши сообщения</li>
+				<li>Мы никогда не будем предоставлять информацию для спама третьим лицам</li>				
+				<li>Ваши данные никогда не попадут в Google, Yandex или другие поисковые системы</li>
+				
 			</ul>
-      <h6>Can I switch plans later?</h6>
-      <p>Absolutely. You can switch between our paid plans, or cancel your account altogether, whenever you like. We will adjust any payments accordingly.</p>
+      <h6>Приватность</h6>
+
+			<ul>
+				<li>Каждый Ваш сосед подтверждает свое местожительства.</li>
+				<li>Все данные передаются по зашифрованному протоколу https.</li>
+				<li>Вы сами выбираете тех, кто может видеть Ваши сообщения</li>
+				<li>Мы никогда не будем предоставлять информацию для спама третьим лицам</li>				
+				<li>Ваши данные никогда не попадут в Google, Yandex или другие поисковые системы</li>
+				
+			</ul>
+
     </div>
     <div class="col-md-6">
       <h6>Do I need to choose a plan now?</h6>
