forum landing page

--- a/vonline_be/war/landmain/index.html
+++ b/vonline_be/war/landmain/index.html
@@ -34,11 +34,11 @@
 	<div class="container">
 		<!-- Startup Logo -->
 		<div class="logo">
-			<a href="#"><img src="images/startup-template-logo.png" alt="startup-logo"></a>
+			<a href="#"><img src="images/vmesteonline.logo.500.png" alt="startup-logo"></a>
 		</div>
 		<!-- Hero Title -->
 		<h1>
-			Микро социальная сеть Вашего подъезда. <br>
+			Сайт Вашего подъезда. <br>
 			<!--span data-typer-targets="Полная приватность,Безопасность данных,Удобство">Полная приватность</span-->
 		</h1>
 
@@ -80,13 +80,14 @@
 		</div>
 		<section class="row features" align="center">
 
-			<!-- Feature 02 -->
+			<!-- Feature 04 -->
+
 			<div class="col-sm-6 col-md-3">
 				<div class="thumbnail">
-					<img src="images/flat-feature-icon-2.png" alt="analytics-icon">
+					<img src="images/flat-feature-icon-4.png" alt="analytics-icon">
 					<div class="caption">
-						<h3>Узнать соседей</h3>
-						<p>Знакомство с соседями может быть очень полезным. Да и просто любопытно узнать - кто же живет рядом с Вами?</p>
+						<h3>Общение</h3>
+						<p>Соседи могут рассказать о хорошем и не дорогом магазине рядом с домом. С соседями вы можете участвовать в подарочных акциях</p>
 					</div>
 				</div>
 			</div>
@@ -102,17 +103,18 @@
 				</div>
 			</div>
 
-			<!-- Feature 04 -->
 
+			<!-- Feature 02 -->
 			<div class="col-sm-6 col-md-3">
 				<div class="thumbnail">
-					<img src="images/flat-feature-icon-4.png" alt="analytics-icon">
+					<img src="images/flat-feature-icon-2.png" alt="analytics-icon">
 					<div class="caption">
-						<h3>Общение</h3>
-						<p>Общайтесь с соседями.</p>
+						<h3>Узнать соседей</h3>
+						<p>Знакомство с соседями может быть полезным. И просто любопытно узнать как можно называть Вашего соседа?</p>
 					</div>
 				</div>
 			</div>
+
 		</section>
 		<!-- // Features Section Ends -->
 
@@ -133,22 +135,29 @@
 					<li>Каждый Ваш сосед подтверждает свое местожительства.</li>
 					<li>Все данные передаются по зашифрованному протоколу https.</li>
 					<li>Вы сами выбираете тех, кто может видеть Ваши сообщения</li>
-
 				</ul>
 				<h6>Приватность</h6>
-
 				<ul>
 					<li>Каждый Ваш сосед подтверждает свое местожительства.</li>
 					<li>Мы никогда не будем предоставлять информацию для спама третьим лицам</li>
 					<li>Ваши данные никогда не попадут в Google, Yandex или другие поисковые системы</li>
+					<li>Вы сами выбираете, какую информацию о Вас видят остальные</li>
 				</ul>
 
 			</div>
 			<div class="col-md-6">
-				<h6>Do I need to choose a plan now?</h6>
-				<p>No. You get the full featured, unlimited version of Startup completely free for 10 days. Once you're ready to upgrade, you may choose a plan which suits your needs.</p>
-				<h6>What payment types do you accept?</h6>
-				<p>We accept payments from MasterCard, Visa, Visa Debit and American Express. We do not accept PayPal. Remember, you do not need to supply card details to start your free trial.</p>
+				<h6>Комфорт</h6>
+				<ul>
+					<li>Отключение электричества или горячей воды - больше не будут неожиданными</li>
+					<li>Вы сами выбираете тех, кто может видеть Ваши сообщения</li>
+					<li>Здороваясь с соседями в лифте, Вы будете знать их имя.</li>
+				</ul>
+				<h6>Польза</h6>
+				<ul>
+					<li>Соседи могут посоветовать хорошее кафе рядом с домом</li>
+					<li>Совместные с соседями оптовые покупки позволят выйграть в цене и качестве</li>
+					<li>Инициативу отремонтировать детскую прощадку или организовать парковку - может поддержать больше людей, чем вы думаете</li>
+				</ul>
 			</div>
 		</section>
 		<!-- // End FAQ -->
@@ -156,18 +165,64 @@
 	</div>
 	<!-- // Container Ends -->
 
+	<!-- Grey Highlight Section -->
+	<div class="highlight testimonials">
+		<div class="container">
+
+			<!-- Testimonials -->
+			<div class="section-title">
+				<h4>Что можно обсудить?</h4>
+			</div>
+			<section class="row breath">
+				<div class="col-md-6">
+					<div class="testblock">Уважаемые жильцы! Уведомляем Вас, что ремонт стояков горячей воды окончен и водоснабжение восстановлено в полном объеме</div>
+					<div class="clientblock">
+						<img src="images/customer-img-1.jpg" alt=".">
+						<p>
+							<strong>ТСЖ</strong>
+						</p>
+					</div>
+					<br>
+					<br>
+					<br>
+					<div class="testblock">Соседи, а погулять вечером с собакой никто компанию не составит? :)</div>
+					<div class="clientblock">
+						<img src="images/da.gif" alt=".">
+						<p>
+							<strong>Веселый сосед</strong>
+						</p>
+					</div>
+				</div>
+				<div class="col-md-6">
+					<div class="testblock">
+						<img src="images/vote.png" alt="."><br> Дамы и господа, представляю результаты голосования жильцов подъезда N3: 76% за установку дополнительных камер видео наблюдения в лифты, 24
+						против. Камеры будут установлены.
+					</div>
+					<div class="clientblock">
+						<img src="images/customer-img-2.jpg" alt=".">
+						<p>
+							<strong>Михаил</strong> <br> Секретарь собрания собственников жилья
+						</p>
+					</div>
+				</div>
+			</section>
+			<!-- // End Testimonials -->
+
+		</div>
+	</div>
+	<!-- // End Grey Highlight Section -->
+
+
 	<!-- Parallax Footer Starts -->
 	<main class="footercta" role="main">
 	<div class="container">
 
 		<!-- Hero Title -->
-		<h1>
-			The Most Simple & Yet <strong>Powerful Way</strong> <br> to <strong>launch</strong> your startup
-		</h1>
+		<h1>Сайт Вашего подъезда.</h1>
 		<!-- Mailchimp Subscribe form -->
 		<div class="row">
 			<div class="col-md-12 breath text-center">
-				<a href="#top" class="btn btn-success btn-lg gototop">GET EARLY ACCESS</a>
+				<a href="#top" class="btn btn-success btn-lg gototop">УЗНАТЬ ПЕРВЫМ</a>
 			</div>
 		</div>
 	</div>
