правки по спинерам

--- a/vonline_be/war/ajax/ajax-confirmOrder.html
+++ b/vonline_be/war/ajax/ajax-confirmOrder.html
@@ -35,6 +35,7 @@
                         <div class="weight-right">
                             Вес: <span></span> кг.
                         </div>
+                        <a href="#" class="refresh">Обновить</a>
 
                         <div class="additionally-order">
                             <div class="delivery-right">
