--- a/vonline_be/war/mailTemplates/mail_example.htm
+++ b/vonline_be/war/mailTemplates/mail_example.htm
@@ -147,78 +147,70 @@ p{margin-bottom:10px;}
                 <table style="font-size: 12px;text-align: center">
                     <thead  style="background-color: #438eb9; color: #fff;">
                     <tr>
-                        <td>Код товара</td>
-                        <td>Производитель</td>
-                        <td>Наименование</td>
-                        <td>Кол-во</td>
-                        <td>Развес</td>
-                        <td>Стоимость</td>
-                        <td>Комментарий</td>
+                        <td style="width: 60px">Код товара</td>
+                        <td style="width: 160px">Производитель</td>
+                        <td style="width: 210px;">Наименование</td>
+                        <td style="width: 50px">Кол-во</td>
+                        <td style="width: 60px">Развес</td>
+                        <td style="width: 60px">Стоимость</td>
                     </tr>
                     </thead>
                     <tbody>
                     <tr>
                         <td>2012</td>
-                        <td>Вологодский молочный комбинат</td>
-                        <td>Йогурт питьевой фруктово-ягодный 1,5%</td>
+                        <td style="text-align: left;">Вологодский молочный комбинат</td>
+                        <td style="text-align: left;">Йогурт питьевой фруктово-ягодный 1,5%</td>
                         <td>1.0 шт</td>
                         <td>0.1 x 1</td>
                         <td>34.0</td>
-                        <td></td>
                     </tr>
                     <tr style="background-color: #C0FCE2;">
                         <td>2012</td>
-                        <td>Вологодский молочный комбинат</td>
-                        <td>Йогурт питьевой фруктово-ягодный 1,5%</td>
+                        <td style="text-align: left;">Вологодский молочный комбинат</td>
+                        <td style="text-align: left;">Йогурт питьевой фруктово-ягодный 1,5%</td>
                         <td>1.0 шт</td>
                         <td>0.1 x 1</td>
                         <td>34.0</td>
-                        <td></td>
                     </tr>
                     <tr>
                         <td>2012</td>
-                        <td>Вологодский молочный комбинат</td>
-                        <td>Йогурт питьевой фруктово-ягодный 1,5%</td>
+                        <td style="text-align: left;">Вологодский молочный комбинат</td>
+                        <td style="text-align: left;">Йогурт питьевой фруктово-ягодный 1,5%</td>
                         <td>1.0 шт</td>
                         <td>0.1 x 1</td>
                         <td>34.0</td>
-                        <td></td>
                     </tr>
                     <tr style="background-color: #C0FCE2;">
                         <td>2012</td>
-                        <td>Вологодский молочный комбинат</td>
-                        <td>Йогурт питьевой фруктово-ягодный 1,5%</td>
+                        <td style="text-align: left;">Вологодский молочный комбинат</td>
+                        <td style="text-align: left;">Йогурт питьевой фруктово-ягодный 1,5%</td>
                         <td>1.0 шт</td>
                         <td>0.1 x 1</td>
                         <td>34.0</td>
-                        <td></td>
                     </tr>
                     <tr>
                         <td>2012</td>
-                        <td>Вологодский молочный комбинат</td>
-                        <td>Йогурт питьевой фруктово-ягодный 1,5%</td>
+                        <td style="text-align: left;">Вологодский молочный комбинат</td>
+                        <td style="text-align: left;">Йогурт питьевой фруктово-ягодный 1,5%</td>
                         <td>1.0 шт</td>
                         <td>0.1 x 1</td>
                         <td>34.0</td>
-                        <td></td>
                     </tr>
                     <tr style="background-color: #C0FCE2;">
                         <td>2012</td>
-                        <td>Вологодский молочный комбинат</td>
-                        <td>Йогурт питьевой фруктово-ягодный 1,5%</td>
+                        <td style="text-align: left;">Вологодский молочный комбинат</td>
+                        <td style="text-align: left;">Йогурт питьевой фруктово-ягодный 1,5%</td>
                         <td>1.0 шт</td>
                         <td>0.1 x 1</td>
                         <td>34.0</td>
-                        <td></td>
                     </tr>
                     <tr>
                         <td>2012</td>
-                        <td>Вологодский молочный комбинат</td>
-                        <td>Йогурт питьевой фруктово-ягодный 1,5%</td>
+                        <td style="text-align: left;">Вологодский молочный комбинат</td>
+                        <td style="text-align: left;">Йогурт питьевой фруктово-ягодный 1,5%</td>
                         <td>1.0 шт</td>
                         <td>0.1 x 1</td>
                         <td>34.0</td>
-                        <td></td>
                     </tr>
                     </tbody>
                 </table>
